color and spacing fixed

--- a/unit3/css/style.css
+++ b/unit3/css/style.css
@@ -4,29 +4,26 @@ body {
 	background-color: #404657;
 	background-size: cover; 
 	line-height: 35px;
-	padding-top: 300px;
+	padding-top: 250px;
+	padding-left: 60px;
 }
 
 hr {
 	float: left;
 	width: 50px;
-	color: red;
-}
-
-a {
-
+	border-color:#FD6E6E;
+	margin-top: -7px;
 }
 
 .ptext {
-	color: white;
+	color: #ffffff;
 	font-family: helvetica;
-	font-size: 30px;
+	font-size: 20px;
 }
 
 .stripe {
 	background: url('../assets/stripes.png') repeat-x;
 	position: absolute;
-	padding: 0 0 0 0;
 	top: 0px;
 	left: 0px;
 	width: 100%;
@@ -36,6 +33,7 @@ figure {
 	height:75px;
 	margin:0;
 }
+
 .logo {background: url('../assets/logo-taasky.png') no-repeat;}
 
 .apple_button {background: url('../assets/btn_store.png') no-repeat;}
